--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -4,14 +4,14 @@ body {
 
 .infos-top-layout {
   .title-top {
-    @include font-neosans;
+    @include font-neosans-black;
     position: absolute;
     top: 38px;
     right: $gap * 2;
     font-weight: bold;
     font-size: 1.875rem;
-    color: $green-light;
-    background-color: white;
+    color: white;
+    background-color: #6b491c;
     padding: 0 $gap;
     border-radius: 20px;
   }
@@ -26,7 +26,7 @@ body {
     line-height: 24px;
     text-align: right;
     letter-spacing: -0.02em;
-    color: $green-light;
+    color: #6b491c;
   }
 }
 
